placeholder in text view

--- a/C0757769_LabAssignment_2_ios/Base.lproj/Main.storyboard
+++ b/C0757769_LabAssignment_2_ios/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                             <attributedString key="attributedText">
                                                 <fragment content="Label">
                                                     <attributes>
-                                                        <font key="NSFont" metaFont="menu" size="14"/>
+                                                        <font key="NSFont" metaFont="system" size="14"/>
                                                     </attributes>
                                                 </fragment>
                                             </attributedString>
